docs/tests/syntax/bad/testfile-lexing4-1.cpp
void m() { i/**/nt i = 10; }
